# Chrome-Dinosaur-Game-AI

./: README.md  config-feedforward.txt  main.py  pyproject.toml
Dino Game NEAT AI/: UltimateDinoMaker.py
Dino Game NEAT AI/Other/: config-feedforward.txt
